# SecMPC-RT-Secure-Encrypted-MPC-with-Real-Time-Co-Scheduling-

./: README.md
Rust Program/: Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
Rust Program/.cargo/: config.toml
Rust Program/src/: main.rs
Simulasi Proteus/: SecMPC_RT_Proteus.ino  SimulasiProteus.pdsprj  SimulasiProteus.pdsprj.LAPTOP-1TTFG9L7.Felix.workspace
Simulasi Proteus/Project Backups/: SimulasiProteus [20260525, 00-38-29].pdsprj  SimulasiProteus [20260525, 00-56-31].pdsprj
