[package]
name        = "secmpc-rt"
version     = "0.1.0"
edition     = "2021"
description = "SecMPC-RT: Secure Encrypted MPC with Real-Time Co-Scheduling"
authors     = ["Mahasiswa Kelas 4C – Pemrograman Kontroler"]

[[bin]]
name  = "secmpc-rt"
test  = false
bench = false

[dependencies]
esp-hal               = { version = "1.1", features = ["esp32s3", "unstable"] }
esp-backtrace         = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println           = { version = "0.16", features = ["esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32s3"] }
embedded-hal          = "1.0"
nb                    = "1.1"
heapless              = "0.8"

[profile.dev]
opt-level = "s"
debug     = true

[profile.release]
opt-level        = "s"
lto              = "fat"
codegen-units    = 1
debug            = 2
debug-assertions = false
overflow-checks  = false
incremental      = false
